Add Dataset Loader

--- a/notebook/02-01-SP-emotion_detection.ipynb
+++ b/notebook/02-01-SP-emotion_detection.ipynb
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"../ml/data/ISEAR.csv\", header=None)\n",
+    "dataset = pd.read_csv(\"../ml/data/external/ISEAR.csv\", header=None)\n",
     "dataset.head()"
    ]
   },
