Restful API, Prediction.py, Dockerfile, README.md
Commiting in bulk due to error in pushing
Restful API for showing the prediction to client.
Prediction.py for predicting emotion given a sentence.
Dockerfile for reproducibility.
README.md for Description.

--- a/notebook/02-01-SP-emotion_detection.ipynb
+++ b/notebook/02-01-SP-emotion_detection.ipynb
@@ -32,8 +32,6 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import nltk\n",
-    "import plotly\n",
-    "import cufflinks as cf\n",
     "from textblob import TextBlob\n",
     "matplotlib.rcParams.update({'font.size': 22})"
    ]
@@ -779,7 +777,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import precision_recall_fscore_support, average_precision_score, recall_score\n",
+    "from sklearn.metrics import precision_recall_fscore_support\n",
     "\n",
     "naive_bayes_model = Pipeline([('count_vectorizer', CountVectorizer(ngram_range=(1,2))), ('bayes', LogisticRegression(penalty='l1', solver='liblinear'))])"
    ]
