--- a/.gitignore.save.1
+++ b/.gitignore.save.1
@@ -22,4 +22,10 @@ python-dateutil==2.8.0
 python-dotenv==0.10.3
 six==1.12.0
 Werkzeug==0.15.4
-mlflow==1.8.0
+mlflow==1.8.0.DS_Store
+/mlruns
+
+**/__pycache__
+*.log
+*.csv
+/.ipynb_checkpoints
